Add fee in frontend
